Add Docker. Minor fixes
